Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81468

[REG 5.13-5.14] QDoc links to internal classes: Broken Link to QBasicMutex

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.0 Alpha
    • 5.14.0
    • Build tools: qdoc
    • None
    • 5
    • 11e62fb056a715075b034a63e248d980bc88b29d (qt/qttools/5.15)
    • DaVinci sprint 2

    Description

      Hello,

      In the online documentation, the page dedicated to QBasicMutex(https://doc.qt.io/qt-5/qbasicmutex.html) seems to be broken, even though other pages link directly to that page.

      For example:

      https://doc.qt.io/qt-5/classes.html

      https://doc.qt.io/qt-5/qmutex.html

       

      Greetings

      Jonas

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-81468
          # Subject Branch Project Status CR V

          Activity

            People

              treinio Topi Reiniö
              jhilk Jonas Hilk
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes